Recipes, lang and loot table

--- a/src/main/resources/assets/globalrpg/lang/en_us.json
+++ b/src/main/resources/assets/globalrpg/lang/en_us.json
@@ -1,4 +1,7 @@
 {
-  "block.globalrpg.magnetite": "Magnetite"
+  "block.globalrpg.magnetite": "Magnetite",
+  "_comment": "Creative Tabs",
+  "itemGroup.globalrpg": "Global Rpg"
+
 
 }
