--- a/src/main/resources/assets/globalrpg/lang/ru_ru.json
+++ b/src/main/resources/assets/globalrpg/lang/ru_ru.json
@@ -1,6 +1,9 @@
 {
+
   "item.globalrpg.magnetiteingot": "Магнетит",
+  "item.globalrpg.titaningot": "Титан",
   "block.globalrpg.magnetite": "Магнетитовая руда",
+  "block.globalrpg.titan": "Титановая руда",
   "_comment": "Creative Tabs",
   "itemGroup.globalrpg": "Глобальный рпг мод"
 }
