--- a/src/main/resources/assets/globalrpg/lang/ru_ru.json
+++ b/src/main/resources/assets/globalrpg/lang/ru_ru.json
@@ -5,5 +5,5 @@
   "block.globalrpg.magnetite": "Магнетитовая руда",
   "block.globalrpg.titan": "Титановая руда",
   "_comment": "Creative Tabs",
-  "itemGroup.globalrpg": "Глобальный рпг мод"
+  "itemGroup.globalrpg": "Global RPG"
 }
