--- a/src/main/resources/assets/main/lang/ru_ru.json
+++ b/src/main/resources/assets/main/lang/ru_ru.json
@@ -6,6 +6,7 @@
 
 
   "block.main.magnetite_ore": "Магнетитовая руда",
+  "block.main.titan_ore": "Титановая руда",
 
 
   "_comment": "Creative Tabs",
