--- a/src/main/resources/assets/main/lang/en_us.json
+++ b/src/main/resources/assets/main/lang/en_us.json
@@ -9,7 +9,7 @@
 
   "block.main.magnetite_ore": "Magnetite Ore",
   "block.main.titan_ore": "Titan Ore",
-  "block.main.separator": "Separator",
+  "block.main.mod_furnace": "Separator",
 
 
 
