--- a/src/main/resources/assets/main/lang/ru_ru.json
+++ b/src/main/resources/assets/main/lang/ru_ru.json
@@ -7,7 +7,7 @@
 
   "block.main.magnetite_ore": "Магнетитовая руда",
   "block.main.titan_ore": "Титановая руда",
-  "block.main.separator": "Сепаратор",
+    "block.main.mod_furnace": "Сепаратор",
 
 
   "_comment": "Creative Tabs",
