--- a/src/main/resources/assets/main/lang/en_us.json
+++ b/src/main/resources/assets/main/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.main.magnetite_ingot": "Magnetite",
   "item.main.titan_ingot": "Titan ingot",
   "item.main.mantid_ingot": "Mantid ingot",
+  "item.main.titan_axe": "Titan Axe",
+  "item.main.titan_sword": "Titan Sword",
 
 
 
