--- a/src/main/resources/assets/main/lang/ru_ru.json
+++ b/src/main/resources/assets/main/lang/ru_ru.json
@@ -3,6 +3,8 @@
   "item.main.magnetite_ingot": "Магнетит",
   "item.main.titan_ingot": "Титановый слиток",
   "item.main.mantid_ingot": "Мантидовый слиток",
+  "item.main.titan_axe": "Титановый топор",
+  "item.main.titan_sword": "Титановый меч",
 
 
   "block.main.magnetite_ore": "Магнетитовая руда",
